Fix z-index of value slider
As far as I can tell, there is no reason for the z-index of this
handle to be set. If it turns out we needed it for some state
I missed, we can simply set the z-index of the menus to higher.

[#106242144]

--- a/src/stylus/components/value-slider.styl
+++ b/src/stylus/components/value-slider.styl
@@ -12,7 +12,6 @@
     position relative
   .value-slider-handle
     cursor pointer
-    z-index 2
     position absolute
     box-sizing border-box
     background-color light-blue
